*1.9.0* (6 July, 2005)

* Added logging of the request URI in the benchmark statement (makes it easy to grep for slow actions)

* Added javascript_include_tag :defaults shortcut that'll include all the default javascripts included with Action Pack (prototype, effects, controls, dragdrop)

* Cache several controller variables that are expensive to calculate #1229 [skaes@web.de]

* The session class backing CGI::Session::ActiveRecordStore may be replaced with any class that duck-types with a subset of Active Record.  See docs for details #1238 [skaes@web.de]

* Fixed that hashes was not working properly when passed by GET to lighttpd #849 [Nicholas Seckar]

* Fixed assert_template nil will be true when no template was rendered #1565 [maceywj@telus.net]

* Added :prompt option to FormOptions#select (and the users of it, like FormOptions#select_country etc) to create "Please select" style descriptors #1181 [Michael Schuerig]

* Added JavascriptHelper#update_element_function, which returns a Javascript function (or expression) that'll update a DOM element according to the options passed #933 [mortonda@dgrmm.net]. Examples:

    <%= update_element_function("products", :action => :insert, :position => :bottom, :content => "<p>New product!</p>") %>

    <% update_element_function("products", :action => :replace, :binding => binding) do %>
      <p>Product 1</p>
      <p>Product 2</p>
    <% end %>

* Added :field_name option to DateHelper#select_(year|month|day) to deviate from the year/month/day defaults #1266 [Marcel Molina]

* Added JavascriptHelper#draggable_element and JavascriptHelper#drop_receiving_element to facilitate easy dragging and dropping through the script.aculo.us libraries #1578 [Thomas Fuchs]

* Added that UrlHelper#mail_to will now also encode the default link title #749 [f.svehla@gmail.com]

* Removed the default option of wrap=virtual on FormHelper#text_area to ensure XHTML compatibility #1300 [thomas@columbus.rr.com]
